セキュリティレベルを追加

--- a/routes/index.html
+++ b/routes/index.html
@@ -24,8 +24,11 @@
 
     <!-- <script src="https://unpkg.com/xpdf-viewer/pdf.js" defer></script> -->
     <script>
+      // Security level
+      const isStrictSecurity = true; // Default: true
+      const dataStorage = isStrictSecurity ? sessionStorage : localStorage;
       (function () {
-        const theme = localStorage.getItem("theme");
+        const theme = dataStorage.getItem("theme");
         const prefersDark =
           window.matchMedia &&
           window.matchMedia("(prefers-color-scheme: dark)").matches;
